I made the necessary components for the experience, projects, and about sections. I also uploaded the necessary photos and made the necessary adjustments to the header and index.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,9 @@
 <header class="flex justify-center items-center py-6 mx-auto w-full max-w-screen-xl">
     <nav class="flex flex-row gap-x-10">
-        <a href="#" class="opacity-75 hover:opacity-100">About Me</a>
-        <a href="#" class="opacity-75 hover:opacity-100">Projects</a>
-        <a href="#" class="opacity-75 hover:opacity-100">Contact</a>
+        <a href="#home" class="opacity-75 hover:opacity-100">Home</a>
+        <a href="#experience" class="opacity-75 hover:opacity-100">Experience</a>
+        <a href="#projects" class="opacity-75 hover:opacity-100">Projects</a>
+        <a href="#about-me" class="opacity-75 hover:opacity-100">About Me</a>
+        <a href="#contact" class="opacity-75 hover:opacity-100">Contact</a>
     </nav>
 </header>
