--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
-<header class="flex justify-center items-center py-6 mx-auto w-full max-w-screen-xl">
-    <nav class="flex flex-row gap-x-10">
+<header class="sticky top-0 z-50 flex justify-center items-center py-6 mx-auto w-full max-w-screen-xl bg-transparentGray rounded-3xl md:rounded-2xl text-lg">
+    <nav class="flex flex-row gap-x-7 md:gap-x-10 lg:gap-x-12">
         <a href="#home" class="opacity-75 hover:opacity-100">Home</a>
         <a href="#experience" class="opacity-75 hover:opacity-100">Experience</a>
         <a href="#projects" class="opacity-75 hover:opacity-100">Projects</a>
