--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title, description } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<div class="absolute top-0 z-[0] w-screen dark:bg-neutral-950 bg-neutral-100 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]">
+		<div class="absolute top-0 z-[0] md:w-screen dark:bg-neutral-950 bg-neutral-100 bg-[radial-gradient(ellipse_80%_80%_at_40%_10%,rgba(120,119,198,0.3),rgba(255,255,255,0))]">
 		<Header />
 		<slot />
 		<Footer />
