Increased font size to make it easier to read and changed colors in the header for users using light mode

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,9 @@
-<header class="sticky top-0 z-50 flex justify-center items-center py-6 mx-auto w-full max-w-screen-xl bg-transparentGray rounded-3xl md:rounded-2xl text-lg">
-    <nav class="flex flex-row gap-x-7 md:gap-x-10 lg:gap-x-12">
+<header class="sticky top-0 z-50 flex justify-center items-center py-6 mx-auto w-full max-w-screen-xl bg-transparentWhite dark:bg-transparentGray rounded-3xl md:rounded-2xl text-xl">
+    <nav class="flex flex-row gap-x-6 md:gap-x-10 lg:gap-x-12">
         <a href="#home" class="opacity-75 hover:opacity-100">Home</a>
         <a href="#experience" class="opacity-75 hover:opacity-100">Experience</a>
         <a href="#projects" class="opacity-75 hover:opacity-100">Projects</a>
         <a href="#about-me" class="opacity-75 hover:opacity-100">About Me</a>
-        <a href="#contact" class="opacity-75 hover:opacity-100">Contact</a>
+        <a href="https://wa.me/3121111440" class="opacity-75 hover:opacity-100">Contact</a>
     </nav>
 </header>
