--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -25,7 +25,7 @@ function colorClasses(color: string = 'yellow') {
 <a
   href={href}
   role="link"
-  class={`inline-flex justify-center items-center py-2.5 px-5 text-base font-medium text-center rounded-lg focus:ring-4 ${colorClasses(color)}`}
+  class={`inline-flex justify-center items-center py-2.5 px-5 ml-14 mt-6 text-xl md:text-lg text-center rounded-lg focus:ring-4 ${colorClasses(color)}`}
 >
   <slot />
 </a>
