--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -17,16 +17,16 @@ const { title, company, description, link, date } = Astro.props
 >
   <div class="relative pb-12 md:col-span-2">
     <div class="sticky top-0">
-      <span class="text-yellow-400 -left-[42px] absolute rounded-full text-6xl md:5xl"
+      <span class="text-yellow-600 dark:text-yellow-400 -left-[42px] absolute rounded-full text-6xl md:5xl"
         >&bull;</span
       >
 
-      <h3 class="text-xl font-bold text-yellow-400">{title}</h3>
+      <h3 class="text-3xl md:text-2xl font-bold text-yellow-600 dark:text-yellow-400">{title}</h3>
       <h4 class="font-semibold text-2xl md:text-xl text-gray-600 dark:text-white">{company}</h4>
-      <time class="p-0 m-0 text-md md:text-sm text-gray-600/80 dark:text-white/80">{date}</time>
+      <time class="p-0 m-0 text-lg md:text-md text-gray-600/90 dark:text-white/80">{date}</time>
     </div>
   </div>
-  <div class="relative flex flex-col gap-2 pb-4 text-gray-600 dark:text-gray-300 md:col-span-3 text-pretty text-lg md:text-md">
+  <div class="relative flex flex-col gap-2 pb-4 text-gray-600 dark:text-gray-200 md:col-span-3 text-pretty text-xl md:text-lg">
     {description}
     {
       link && (
