--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -24,8 +24,8 @@ const props: CardProps = { ...defaultProps, ...Astro.props };
 <div class="py-8 px-4 lg:px-0 mx-auto max-w-full lg:py-10">
     <div class="relative grid lg:grid-cols-5 lg:gap-10 bg-white dark:bg-neutral-950 border border-gray-300 dark:border-white-700 rounded-xl p-5">
         <div class="p-8 lg:p-12 lg:col-span-2 order-2 lg:order-2">
-            <h1 class="text-gray-900 dark:text-white text-3xl font-extrabold mb-2">{props.title}</h1>
-            <p class="text-xl md:text-lg font-normal text-gray-600 dark:text-gray-300 mb-6">{props.description}</p>
+            <h1 class="text-gray-900 dark:text-white text-4xl md:text-3xl font-extrabold mb-3">{props.title}</h1>
+            <p class="text-2xl md:text-lg font-normal text-gray-600 dark:text-gray-300 mb-6 text-pretty">{props.description}</p>
             <LinkButton href={props.link} color={props.buttonColor}>{props.linkText}</LinkButton>
         </div>
 
