--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,12 +43,12 @@ import SectionContainer from '../components/SectionContainer.astro';
         <div class="flex justify-center gap-x-5 pb-10">
           <h2 class="text-3xl md:2xl text-wrap py-2 text-justify">
             Specialized in
-            <span class="opacity-90 dark:text-yellow-300 text-yellow-500">
+            <span class="opacity-90 dark:text-yellow-300 text-yellow-600">
               Smart Solutions & Innovative Applications.
             </span>
             <br />
             Creating
-            <span class="opacity-90 dark:text-yellow-300 text-yellow-500">
+            <span class="opacity-90 dark:text-yellow-300 text-yellow-600">
               high quality applications
             </span>
             from Mexico 🇲🇽 for the world.
@@ -118,8 +118,8 @@ import SectionContainer from '../components/SectionContainer.astro';
       <h2 class="text-4xl font-bold text-left pt-8 pb-2 ml-5 flex items-center">
         <Briefcase class="size-8 mr-3" /> About Me
       </h2>
-      <div class="flex flex-col md:flex-row items-center">
-        <p class="text-xl md:text-lg text-justify md:mb-0">
+      <div class="flex flex-col md:flex-row items-center ">
+        <p class="text-2xl md:text-xl text-justify md:mb-0 px-4 text-pretty">
           I am a software engineer and application developer with a passion for
           creating innovative applications that solve real-world problems. I
           have experience in developing web applications, mobile applications,
