Greeting added in WhatsApp link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,6 +4,7 @@
         <a href="#experience" class="opacity-75 hover:opacity-100">Experience</a>
         <a href="#projects" class="opacity-75 hover:opacity-100">Projects</a>
         <a href="#about-me" class="opacity-75 hover:opacity-100">About Me</a>
-        <a href="https://wa.me/3121111440" class="opacity-75 hover:opacity-100">Contact</a>
+        <a href="https://wa.me/3121111440?text=Hola%2C%20Terrones%2C%20buen%20d%C3%ADa.
+        " class="opacity-75 hover:opacity-100">Contact</a>
     </nav>
 </header>
