Added btn to go home after the About Me section.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import ProjectCard from '../components/ProjectCard.astro';
 import Experience from '../components/Experience.astro';
 import Briefcase from '../icons/Briefcase.astro';
 import CodeIcon from '../icons/CodeIcon.astro';
+import HomeIcon from '../icons/HomeIcon.astro';
 import SectionContainer from '../components/SectionContainer.astro';
 ---
 
@@ -129,6 +130,13 @@ import SectionContainer from '../components/SectionContainer.astro';
         />
       </div>
     </SectionContainer>
+
+
+    <div class="flex justify-center mt-10">
+      <a href="#home" class="btn btn-primary border rounded-lg p-2">
+        <HomeIcon class="size-8" />
+      </a>
+    </div>
     
   </main>
 </Layout>
