--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import SectionContainer from '../components/SectionContainer.astro';
     <SectionContainer className="home-section" idSection="home">
       <div class="intro mt-14">
         <h1
-          class="text-5xl md:text-6xl font-bold flex justify-center gap-x-5 md:p-3 pb-6 mb-4"
+          class="text-5xl md:text-6xl font-bold flex justify-center gap-x-5 md:gap-x-[8.5rem] pb-6 mb-4"
         >
           <span>Hey there! 👋🏻 <br /> I'm Terrones </span>
           <div class="flex flex-col items-center">
@@ -41,7 +41,7 @@ import SectionContainer from '../components/SectionContainer.astro';
           </div>
         </h1>
 
-        <div class="flex justify-center gap-x-5 pb-10">
+        <div class="flex justify-center gap-x-5 pb-16">
           <h2 class="text-3xl md:2xl text-wrap py-2 text-justify">
             Specialized in
             <span class="opacity-90 dark:text-yellow-300 text-yellow-600">
