--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -120,7 +120,7 @@ import SectionContainer from '../components/SectionContainer.astro';
         <Briefcase class="size-8 mr-3" /> About Me
       </h2>
       <div class="flex flex-col md:flex-row items-center ">
-        <p class="text-2xl md:text-xl text-justify md:mb-0 px-4 text-pretty">
+        <p class="text-2xl md:text-xl text-justify inter-word md:mb-0 px-4 text-pretty">
           I am Francisco Javier Terrones Díaz, known as Terrones. I am a software engineer and application developer with a passion for creating innovative solutions to real-world problems. With experience in developing web, mobile, and desktop applications, I am dedicated to continuously learning and mastering new technologies. My goal is to deliver high-quality applications that exceed my clients' expectations.
         </p>
         <img
