Fixed error that caused it to not redirect correctly to the point of sale

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,7 +90,7 @@ import SectionContainer from '../components/SectionContainer.astro';
       <ProjectCard
         title="Terrones POS"
         description="A Point of Sale (POS) system tailored for small and medium businesses, designed to streamline inventory management and sales processes with simplicity and efficiency."
-        link="https://shorturl.at/fnST7"
+        link="https://shorturl.at/PaAHS"
         linkText="Go to the demo"
         buttonColor="purple"
         image="../media/img/TerronesPWA.webp"
