--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,7 +90,7 @@ import SectionContainer from '../components/SectionContainer.astro';
       <ProjectCard
         title="Terrones POS"
         description="A Point of Sale (POS) system tailored for small and medium businesses, designed to streamline inventory management and sales processes with simplicity and efficiency."
-        link="https://t.ly/hqCj-"
+        link="https://acortar.link/2G2rsJ"
         linkText="Go to the demo"
         buttonColor="purple"
         image="../media/img/TerronesPWA.webp"
